- implement /robot apis
