# backend/src/main/java/com/gistacsl/mosaic/robot/dto/RobotInfosPage.java
@@ -1,0 +1,9 @@
+package com.gistacsl.mosaic.robot.dto;
+
+import java.util.List;
+
+public record RobotInfosPage(
+        List<RobotInfo> data,
+        Integer count
+) {
+}
